--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.7.12",
+    "@heroicons/vue": "^2.0.16",
     "@nuxt/image-edge": "^1.0.0-27991759.1a5eea1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
@@ -19,8 +21,8 @@
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
-    "@dcupl/common": "^1.0.0-beta.4",
-    "@dcupl/core": "^1.0.0-beta.4",
-    "@dcupl/loader": "^1.0.0-beta.4"
+    "@dcupl/common": "^1.0.0",
+    "@dcupl/core": "^1.0.0",
+    "@dcupl/loader": "^1.0.0"
   }
 }
